GNOME Bugzilla – Bug 655387
Missing GObject introspection annotations
Last modified: 2011-07-29 12:17:52 UTC
Vala's Clutter-1.0.metadata file contains some information which is missing from the GObject introspection annotations.
Created attachment 192733 [details] [review] introspection: add missing introspection data from Vala bindings
Review of attachment 192733 [details] [review]: looks good.
Attachment 192733 [details] pushed as a6bd11a - introspection: add missing introspection data from Vala bindings