introspection: add missing introspection data from Vala bindings

https://bugzilla.gnome.org/show_bug.cgi?id=655387